# RL-Market-Maker

./: .gitignore  README.md  quick_setup.md  requirements.txt  setup.py  setup_project.py
configs/: env_config.yaml  training_config.yaml
cpp/: CMakeLists.txt
cpp/include/: order_book.hpp  types.hpp
cpp/src/: bindings.cpp  order_book.cpp
data/logs/: SAC_BTCUSDT_20260106_133408.csv  SAC_BTCUSDT_20260106_134132.csv  SAC_BTCUSDT_20260109_161918.csv
logs/tensorboard/ppo_20260106_055933/: config.yaml
logs/tensorboard/ppo_20260106_060517/evaluations/: evaluations.npz
logs/tensorboard/ppo_20260106_061122/evaluations/: evaluations.npz
logs/tensorboard/sac_20260106_072254/: config.yaml
logs/tensorboard/sac_20260106_072254/evaluations/: evaluations.npz
notebooks/: 01_data_exploration.ipynb  02_baseline_performance.ipynb  03_rl_training.ipynb  04_live_results_analysis.ipynb  05_comparison.ipynb
python/agents/: __init__.py
python/backtesting/: __init__.py  backtest.py  metrics.py
python/baselines/: __init__.py  avellaneda_stoikov.py
python/live_trading/: binance_connector.py  logger.py  paper_trader.py
python/training/: train_ppo.py  train_sac.py
python/utils/: __init__.py  analysis.py  analyze_live_trading.py  compare_models.py  generate_report.py  plotting.py
reports/report_20260108_140900/: AS_Baseline_metrics.json  PPO_Agent_metrics.json  comparison_table.csv  summary_report.txt
reports/report_20260109_142432/: SAC_Agent_metrics.json  comparison_table.csv  summary_report.txt
scripts/: build_cpp.bat  cleanup_cpp.bat
